--- a/src/components/portfolio/projects/Projects.module.css
+++ b/src/components/portfolio/projects/Projects.module.css
@@ -94,6 +94,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 114px;
+
 }
 
 .iconsWrapper {
@@ -101,6 +103,7 @@
   gap: 8px;
   margin-bottom: 12px;
   flex-wrap: wrap;
+  justify-content: end;
 }
 
 .iconBox {
