--- a/src/components/portfolio/skills/Skills.module.css
+++ b/src/components/portfolio/skills/Skills.module.css
@@ -14,7 +14,7 @@
 .container {
   width: 100%;
   max-width: 1176px;
-  z-index: 2;
+  
 }
 
 h2 {
@@ -42,6 +42,7 @@ h2 {
   display: flex;
   align-items: center;
   flex-direction: column;
+  gap: 8px;
 }
 
 .mySkillsRow {
