--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -10,6 +10,6 @@ html, body {
   font-family: "Quicksand", sans-serif!important;
 }
 
-h2{
+h1, h2, h3, button{
     font-family: "Quicksand", sans-serif!important;
 }
